--- a/source/pom.xml
+++ b/source/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.cyanogenmod</groupId>
-    <artifactId>cm-cloud-generator</artifactId>
+    <groupId>org.mokee</groupId>
+    <artifactId>mk-cloud-generator</artifactId>
     <name>${project.artifactId}</name>
     <version>1.0</version>
 
